Fixed footer that was overflowing content
Fixes #32

--- a/style.css
+++ b/style.css
@@ -337,8 +337,7 @@ input[type="text"] {
 }
 
 .footer {
-  height: 100px !important;
-  padding: 30px !important;
+  padding: 10px !important;
 }
 
 .cover-image {
